dark mode correction

--- a/detailList/detail_list.css
+++ b/detailList/detail_list.css
@@ -141,6 +141,33 @@ body.light_mode{
             }
         }
     }
+    .modifier_candidature{
+        color: var(--White);
+        background-color: var(--Color-1);
+        border-color: var(--Color-2);
+
+        .selections{
+            input{
+                background-color: var(--White);
+                color: var(--Color-1);
+            }
+            select{
+                background-color: var(--White);
+                color: var(--Color-1);
+            }
+        }
+        button{
+            background-color: var(--White);
+            color: var(--Color-1);
+        }
+        button:hover{
+            color: var(--Color-2);
+        }
+        button:focus{
+            color: var(--Black);
+            border-color: var(--Black);
+        }
+    }
     footer{
         background-color: var(--White);
     }
@@ -195,6 +222,22 @@ body.dark_mode{
             .fiches{
                 border-color: var(--Color-2);
             }
+        }
+    }
+    .modifier_candidature{
+        background-color: var(--Color-2);
+        border-color: var(--White);
+
+        .selections{
+            input{
+                background-color: var(--White);
+            }
+            select{
+                background-color: var(--White);
+            }
+        }
+        button{
+            background-color: var(--White);
         }
     }
     footer{
@@ -266,7 +309,7 @@ main{
             transition: translate ease 300ms;
         }
     }
-    .button_retour:hover, .button_retour:focus{
+    .button_retour:hover{
         ion-icon{
             translate: 5px;
         }
@@ -350,31 +393,30 @@ main{
 
 /* ###### Modifier candidature ###### */
 .modifier_candidature{
-    position: relative;
-    padding: 32px;
-    display: none;
+    position: fixed;
+    padding: 16px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    position: absolute;
+    display: flex;
     top: 50%;
     left: 50%;
     translate: -50% -50%;
-    background-color: #283F3B50;
     box-shadow: 0 5px 10px #000;
     gap: 24px;
     backdrop-filter: blur(5px);
-    border-radius: 8px;
+    border-radius: 16px;
+    border: 5px solid;
+    transition: opacity ease 300ms;
+    opacity: 0;
+    visibility: hidden;
 
     .icon_close{
         position: absolute;
         top: 16px;
         right: 16px;
         cursor: pointer;
-    }
-    .icon_close:hover{
-        color: var(--Color-2);
     }
     .selections{
         display: flex;
@@ -384,16 +426,15 @@ main{
         gap: 16px;
 
         input{
+            width: 100%;
             padding: 8px 24px;
-            background-color: var(--Color-4);
             border: none;
             border-radius: 16px;
             outline: none;
-            cursor: pointer;
         }
         select{
+            width: 100%;
             padding: 8px 24px;
-            background-color: var(--Color-4);
             border: none;
             border-radius: 16px;
             cursor: pointer;
@@ -507,7 +548,27 @@ footer{
             }
         }
     }
+    /* ###### Modifier candidature ###### */
+    .modifier_candidature{
+        padding: 24px;
+        border-radius: 12px;
 
+        .selections{
+            input{
+                width: auto;
+            }
+            select{
+                width: auto;
+            }
+        }
+        textarea{
+            width: 100%;
+            height: 96px;
+            padding: 16px;
+            border-radius: 8px;
+            outline: none;
+        }
+    }
     /* ###### Footer ###### */
     footer{
         width: 100%;
